mule-fundamentals/v/3.4/first-30-minutes-with-mule.adoc
= First 30 Minutes with Mule

image:first30.png[first30]The first section of a three-part syllabus for learning link:/mule-fundamentals/v/3.4[Mule Fundamentals], the *First 30 Minutes with Mule* is designed to introduce you to Mule and walk you through the steps to build and run your first Mule application. 

Read these documents sequentially to build your knowledge of, and familiarity with Mule. When you've read the basics, continue your learning with the link:/mule-fundamentals/v/3.4/first-day-with-mule[*First Day with Mule*] and link:/mule-fundamentals/v/3.4/first-week-with-mule[*First Week with Mule*] sections.

[cols="2*"]
|===
|*link:/mule-fundamentals/v/3.4/meet-mule[Meet Mule]* |Learn about the various features and functionality Mule has to offer, including its IDE, deployment options, and management capabilities.
|*link:/mule-fundamentals/v/3.4/download-and-launch-mule-studio[Download and Launch Mule Studio]* |Just like it sounds, follow the instructions to download Mule. +
Batteries... er, embedded test server included!
|*link:/docs/display/34X/Mule+Studio+Essentials[Mule Studio Essentials]* |Learn the essentials for using Mule's own IDE, Mule Studio.
|*link:/mule-fundamentals/v/3.4/build-a-hello-world-application[Build an Application]* |Follow a very quick tutorial to build and run a basic Mule application.
|===

== See Also

link:/mule-fundamentals/v/3.4/first-day-with-mule[image:firstDay.png[firstDay]]      link:/mule-fundamentals/v/3.4/first-week-with-mule[image:first_week3.png[first_week3]]
