mule-fundamentals/v/3.7/first-30-minutes-with-mule.adoc
= First 30 Minutes with Mule
:keywords: studio, server, components, connectors, elements, palette

image:first30.png[first30]

The first section of a three-part syllabus for learning link:/mule-fundamentals/v/3.7[Mule Fundamentals], the *First 30 Minutes with Mule* introduces you to Mule and walks you through the steps to build and run your first Mule application. 

Read these documents sequentially to build your knowledge of, and familiarity with Mule. When you've read the basics, continue your learning with the link:/mule-fundamentals/v/3.7/first-day-with-mule[*First Day with Mule*] and link:/mule-fundamentals/v/3.7/first-week-with-mule[*First Week with Mule*] sections.

[width="100%",cols=","]
|===
|*link:/mule-fundamentals/v/3.7/anypoint-platform-primer[Anypoint Platform Primer]* |Learn about the various features and functionality Mule has to offer, including its IDE, deployment options, and management capabilities.
|*link:/anypoint-connector-devkit/v/3.7/setting-up-your-dev-environment[Development Environment Setup]* |Learn about setting up Anypoint Studio, Maven, code repositories, on premise Mule server, and cloud application management.
|*link:/mule-fundamentals/v/3.7/begin-with-the-basics[Begin with the Basics]* |Learn about flows and messages, message processors, batch processing, Mule Expression Language (MEL), and running Mule applications.
|*link:/mule-fundamentals/v/3.7/download-and-launch-anypoint-studio[Download and Launch Anypoint Studio]* |Follow the instructions to download Anypoint Studio, where you can build programs by dragging building blocks to its canvas and running your application. Plus, Batteries... er, an embedded test server is included!
|*link:/mule-fundamentals/v/3.7/anypoint-studio-essentials[Anypoint Studio Essentials]* |Learn the essentials for using Mule's own IDE, Anypoint Studio.
|*link:/mule-fundamentals/v/3.7/build-a-hello-world-application[Build a Hello World Application]* |Follow a very quick tutorial to build and run a basic Mule application.
|*link:/mule-fundamentals/v/3.7/glossary[Glossary]* |Learn to speak like a Muley.
|*link:/mule-fundamentals/v/3.7/anypoint-exchange[Anypoint Exchange]* |Learn about MuleSoft's exciting product for installing software, templates to simplify your work, and links to documentation.
|===

== See Also

* link:/mule-fundamentals/v/3.7/first-day-with-mule[image:firstDay.png[firstDay]]      
* link:/mule-fundamentals/v/3.7/first-week-with-mule[image:first_week3.png[first_week3]]
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
